--- a/manifest.json
+++ b/manifest.json
@@ -9,13 +9,13 @@
         "storage",
         "http://*/",
         "https://*/",
-        "tabs",
-        "activeTab"
+        "activeTab",
+        "tabs"
     ],
 
     "background":{
         "scripts": ["background.js"],
-        "persistent": true 
+        "persistent": true
     },
 
     "browser_action": {
@@ -31,13 +31,10 @@
     },
 
     "content_scripts": [
-    {
-      "matches": [
-         "<all_urls>" 
-      ],
-      "js": [ 
-        "popup.js" 
-      ],
-      "run_at": "document_end"
-    }]
+        {
+            "matches": [ "<all_urls>" ],
+            "js": [ "popup.js" ],
+            "run_at": "document_end"
+        }
+    ]
 }
